# SandWitchProject

./: .gdvmrc  .gitignore  Cargo.toml  README.md  character.tscn  character_temp.gd  character_temp.gd.uid  floater.gd  gdext.gdextension  gdext.gdextension.uid  hate_cube.gd  hate_cube.gd.uid  hate_cube.tscn  icon.svg.import  main.gd  main.gd.uid  main.tscn  project.godot  testing.tscn
addons/func_godot/: func_godot_default_map_settings.tres  func_godot_local_config.tres
assets/Gamescenes/: swampypeasants0.tscn
assets/maps/: pci_sewers.map  pci_sewers.map.import  swampypeasants.map  swampypeasants.map.import  swp_jungle.map  swp_jungle.map.import  test_map.map  test_map.map.import  testing.map  testing.map.import
assets/models/: dry_egg.gltf  dry_egg.gltf.import  dry_egg_0.png.import  fella.gltf  fella.gltf.import  fella_mesh.res
assets/textures/: FUCKING_EGG.png.import  eggshell.png.import  eggshell.tres  grungy_bricks.png.import  grungy_bricks.tres  (+6 more)
fps/: gun_manager.gd  gun_manager.gd.uid  health_manager.gd  health_manager.gd.uid  ui.gd  ui.gd.uid  ui.tscn
rts/: outline.gdshader.uid  rts_camera.gd  rts_cursor.gd  rts_cursor.gd.uid  rts_interface.gd  rts_interface.gd.uid  rts_interface.tscn  rts_testing.tscn  unit_box.gd  unit_box.gd.uid  unit_box.tscn  unit_data.gd  unit_data.gd.uid  unit_manager.gd  unit_manager.gd.uid  unit_menu.gd  unit_menu.gd.uid
rust/: Cargo.toml
rust/src/: character_body.rs  lib.rs
scenes/: fps_character.tscn
utilities/: globals.gd  globals.gd.uid  health_manager.gd  hitbox_manager.gd  hitbox_manager.gd.uid  hitbox_manager.tscn
(+62 files in other folders)
