[package]
name = "sand_witch_project_gdext"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
serde = { version = "*", features = [ "derive" ] }

[dependencies.godot]
git = "https://github.com/godot-rust/gdext"
branch = "master"
features = [ "experimental-threads", "api-custom", "register-docs", "serde" ]
